# Solana-Meme-Coin-Mission-V2

./: Cargo.toml  README.md  build.rs  gitignore  health_check.sh  mod.rs  setup.sh  update.sh
config/: local.toml
migrations/: 001_initial_schema.sql  002_add_source_wallet.sql  003_add_training_sessions.sql  005_data_collection.sql
ml/autoresearch/: agent.py  program.md
ml/scripts/: gnn_sidecar.py  outcome_tracker.py  train_all.py  train_gnn.py  train_nlp.py  train_with_birdeye.py
src/: README.md  env.example  main.rs  types.rs  update.sh
src/config/: default.toml  mod.rs
src/db/: mod.rs  postgres.rs  redis_client.rs
src/enrichment/: mod.rs
src/execution/: mod.rs  rpc_client.rs  swap_builder.rs
src/filter/: mod.rs
src/migrations/: V99__autoresearch_columns.sql
src/ml/autoresearch/: dashboard.py  experiment_runner.py  requirements.txt
src/ml/scripts/: gnn_sidecar.py  outcome_tracker.py  train_all.py  train_gnn.py  train_nlp.py
src/models/: mod.rs
src/monitor/: mod.rs
src/price_feed/: mod.rs
src/scanner/: instruction_parser.rs  mod.rs
src/signals/: mod.rs  telegram.rs  twitter.rs  wallet_tracker.rs
src/src/db/: postgres.rs
src/src/execution/: mod.rs
src/src/models/: mod.rs
src/src/monitor/: mod.rs
src/src/scanner/: mod.rs
src/src/signals/: mod.rs  twitter.rs  wallet_tracker.rs
src/src/strategy/: mod.rs
src/strategy/: mod.rs
