[package]
name    = "solana-memecoin-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "High-frequency Solana memecoin trading bot with AI filtering"

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
# ── Async runtime ──────────────────────────────────────────────────────────────
tokio        = { version = "1.35",  features = ["full"] }
tokio-stream = "0.1"
futures      = "0.3"

# ── Solana SDK ─────────────────────────────────────────────────────────────────
solana-sdk                   = "2.0"
spl-token                    = "6.0"
# FIX: spl-associated-token-account 6.x does not exist on crates.io.
# Compatible version for solana-sdk 2.0 is 4.x.
spl-associated-token-account = { version = "4.0", features = ["no-entrypoint"] }

# ── Yellowstone gRPC (Geyser real-time stream) ────────────────────────────────
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", optional = true }
yellowstone-grpc-proto  = { git = "https://github.com/rpcpool/yellowstone-grpc", optional = true }

# ── Serialization ──────────────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode    = "1.3"
borsh      = { version = "1.3", features = ["derive"] }
base64     = "0.21"

# ── Database ───────────────────────────────────────────────────────────────────
sqlx  = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros"
] }
# FIX: redis 0.24 lacks incr_by_float on AsyncCommands. Use 0.25.
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# ── HTTP ───────────────────────────────────────────────────────────────────────
reqwest = { version = "0.11", features = ["json", "stream"] }

# ── ML inference (ONNX runtime) ────────────────────────────────────────────────
# FIX: add download-binaries so OnnxRuntime is fetched at build time;
# previously missing, causing link failures when ort was not found.
ort     = { version = "2.0.0-rc.4", features = ["download-binaries"] }
ndarray = "0.15"

# ── NLP tokenizer (for FinBERT inference in Rust) ─────────────────────────────
# Loads the HuggingFace tokenizer saved by train_nlp.py.
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }

# ── Telegram MTProto ───────────────────────────────────────────────────────────
grammers-client  = { git = "https://github.com/Lonami/grammers", package = "grammers-client" }
grammers-session = { git = "https://github.com/Lonami/grammers", package = "grammers-session" }

# ── Monitoring ─────────────────────────────────────────────────────────────────
axum                        = "0.7"
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["env-filter"] }
metrics                     = "0.22"
metrics-exporter-prometheus = "0.13"

# ── Config ─────────────────────────────────────────────────────────────────────
config  = "0.13"
toml    = "0.8"
dotenvy = "0.15"

# ── Utilities ──────────────────────────────────────────────────────────────────
uuid         = { version = "1.6",  features = ["v4", "serde"] }
chrono       = { version = "0.4",  features = ["serde"] }
anyhow       = "1.0"
thiserror    = "1.0"
regex        = "1.10"
dashmap      = "5.5"
parking_lot  = "0.12"
rand         = "0.8"
bs58         = "0.5"
hex          = "0.4"
rust_decimal = { version = "1.33", features = ["serde"] }

# ── gRPC (tonic/prost only via yellowstone feature; removed from direct deps
# to prevent version conflicts with yellowstone-grpc's own transitive pins) ───

[features]
default     = ["yellowstone"]
yellowstone = ["yellowstone-grpc-client", "yellowstone-grpc-proto"]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
