[package]
name    = "solana-memecoin-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "High-frequency Solana memecoin trading bot with AI filtering"

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
# ── Async runtime ──────────────────────────────────────────────────────────────
tokio        = { version = "1.35",  features = ["full", "process"] }
tokio-stream = "0.1"
futures      = "0.3"

# ── Solana SDK ─────────────────────────────────────────────────────────────────
solana-sdk                   = "2.0"
spl-token                    = "6.0"
spl-associated-token-account = { version = "4.0", features = ["no-entrypoint"] }

# ── Yellowstone gRPC ──────────────────────────────────────────────────────────
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", optional = true }
yellowstone-grpc-proto  = { git = "https://github.com/rpcpool/yellowstone-grpc", optional = true }

# ── Serialization ──────────────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode    = "1.3"
borsh      = { version = "1.3", features = ["derive"] }
base64     = "0.21"

# ── Database ───────────────────────────────────────────────────────────────────
sqlx  = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate"
] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# ── HTTP ───────────────────────────────────────────────────────────────────────
reqwest = { version = "0.11", features = ["json", "stream"] }

# ── ML inference (ONNX runtime) ────────────────────────────────────────────────
ort     = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.15"

# ── NLP tokenizer ─────────────────────────────────────────────────────────────
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }

# ── Telegram MTProto ───────────────────────────────────────────────────────────
# grammers-client and grammers-session have been REMOVED.
# The grammers library is at a pre-release commit (fa7692e) where the public
# connection API (Client::connect, Config, InitParams, Session struct) does not
# yet exist.  TelegramScanner::run() is stubbed to log a warning and sleep
# until grammers ships a stable 0.8 tag.  Re-add these deps at that point:
#   grammers-client  = { git = "https://github.com/Lonami/grammers", tag = "v0.8.x", package = "grammers-client" }
#   grammers-session = { git = "https://github.com/Lonami/grammers", tag = "v0.8.x", package = "grammers-session" }

# ── Monitoring ─────────────────────────────────────────────────────────────────
axum                        = "0.7"
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["env-filter"] }
metrics                     = "0.22"
metrics-exporter-prometheus = "0.13"

# ── Config ─────────────────────────────────────────────────────────────────────
config  = "0.13"
toml    = "0.8"
dotenvy = "0.15"

# ── Utilities ──────────────────────────────────────────────────────────────────
uuid         = { version = "1.6",  features = ["v4", "serde"] }
chrono       = { version = "0.4",  features = ["serde"] }
anyhow       = "1.0"
thiserror    = "1.0"
regex        = "1.10"
dashmap      = "5.5"
parking_lot  = "0.12"
rand         = "0.8"
bs58         = "0.5"
hex          = "0.4"
rust_decimal = { version = "1.33", features = ["serde"] }

[features]
default     = ["yellowstone"]
yellowstone = ["yellowstone-grpc-client", "yellowstone-grpc-proto"]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
